added config files and created the databse

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/bcrisp084/Burger-Spot/issues"
   },
-  "homepage": "https://github.com/bcrisp084/Burger-Spot#readme"
+  "homepage": "https://github.com/bcrisp084/Burger-Spot#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
+    "mysql": "^2.18.1",
+    "orm": "^5.0.5"
+  }
 }
