--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mysql": "^2.18.1",
-    "orm": "^5.0.5"
+    "orm": "^5.0.5",
+    "path": "^0.12.7"
   }
 }
